# dfu-programmer

./: .clang-format  .gitattributes  .gitignore  AUTHORS  ChangeLog  ChangeLog.txt  Makefile.am  Makefile.in  NEWS  README  README.md  SF_ReadMe.txt  aclocal.m4  bootstrap.sh  config.h.in  configure  configure.ac  configwin.sh  copy of array using memcpy.c  cspell.yml  dfu-programmer.spec  dfu-programmer.spec.in  dfu_completion  install_autocomplete.sh  package-lock.json  package.json  release_proc.txt  tsconfig.json  update-bash-completion.sh
.github/workflows/: build.yml  mega-linter.yml  quality.yml  test.yml
cSpell/: dependencies.txt  export.txt  names.txt  words.txt
docs/: Makefile.in  dfu-programmer.1  dfu-programmer.html
fedora/: 10-dfu-programmer.fdi  99-dfu-programmer.rules  README  dfu-programmer-at89c51.perms  dfu-programmer-at90usb.perms  dfu-programmer.spec.in
src/: Makefile.am  Makefile.in  arguments.c  arguments.h  atmel.c  atmel.h  commands.c  commands.h  config.h.in  dfu-bool.h  dfu-device.h  dfu.c  dfu.h  intel_hex.c  intel_hex.h  libdfu.c  libdfu.h  main.c  stm32.c  stm32.h  util.c  util.h
test/: README.md  standalone.ts  usb.ts
test/assets/avr/: hello-dfu.hex
test/util/: README.md  delay.ts  dfu.ts  lock.ts  run.ts
windows/: atmel_usb_dfu.inf
