AM_CFLAGS = -Wall
bin_PROGRAMS = dfu-programmer
dfu_programmer_SOURCES = main.c
dfu_programmer_SOURCES += libdfu.c
dfu_programmer_SOURCES += arguments.c
dfu_programmer_SOURCES += atmel.c
dfu_programmer_SOURCES += commands.c
dfu_programmer_SOURCES += dfu.c
dfu_programmer_SOURCES += intel_hex.c
dfu_programmer_SOURCES += stm32.c
dfu_programmer_SOURCES += util.c
